--- a/public/html/Our_Team.html
+++ b/public/html/Our_Team.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Team</title>
-    <link rel="stylesheet" href="Our_Team.css">
+    <link rel="stylesheet" href="../css/Our_Team.css">
 </head>
 <body>
     <div id="main">
