--- a/public/html/index.html
+++ b/public/html/index.html
@@ -26,7 +26,7 @@
           <h1>RISE. UPSKILL. SHINE.</h1>
           <h2 id="page-1para" >WELCOME TO NOTE-O-HUB</h2>
           <p id="page-1para">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            Welcome to Note-O-hub, your premier destination for B.Tech education excellence. With a commitment to bridging the gap between classroom learning and real-world application, we offer comprehensive resources, personalized mentorship, and innovative tools to empower B.Tech students across India.
           </p>
           <div class="main1">
             <select id="states" onchange="populateCities(this.value)" >
