--- a/public/html/delhi.html
+++ b/public/html/delhi.html
@@ -14,8 +14,9 @@
         <div class="dropdown" id="collegeDropdownContainer">
             <select id="collegeDropdown">
                 <option value="" selected disabled>Select College</option>
-                <option value="college1">College 1</option>
-                <option value="college2">College 2</option>
+                <option value="college1">BPIT</option>
+                <option value="college2">DTU</option>
+                <option value="college2">SRCC</option>
                 <!-- Add more colleges as needed -->
             </select>
         </div>
