ap1..changed..more..content..added

--- a/public/html/AP1.html
+++ b/public/html/AP1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Applied Physics-1</title>
-    <link rel="stylesheet" href="AP1.css">
+    <link rel="stylesheet" href="../css/AP1.css">
 </head>
 <body>
     <div class="main">
@@ -39,7 +39,16 @@
     </div>
     <div id="premium" class="hidden">
         <!-- Content for Premium Course -->
-        <h1 style="margin-top: 40px; margin-left: 25vw;">Premium Course content goes here.</h1>
+        <!-- <h1 style="margin-top: 40px; margin-left: 25vw;">Premium Course content goes here.</h1> -->
+        <div class="spotify_playlists">
+            <div class="list">
+                <div class="item">
+                    <a href=""><img src="../images/Screenshot 2024-02-25 141559.png" /></a>
+                    <h2><a href=""> Applied Physics-1</a></h4>
+                    <p>Anonymous</p>
+                </div>
+            </div>
+        </div>
     </div>
 
 
