premium_course_added

--- a/public/html/AP1.html
+++ b/public/html/AP1.html
@@ -43,8 +43,8 @@
         <div class="spotify_playlists">
             <div class="list">
                 <div class="item">
-                    <a href=""><img src="../images/Screenshot 2024-02-25 141559.png" /></a>
-                    <h2><a href=""> Applied Physics-1</a></h4>
+                    <a href="course.html"><img src="../images/Screenshot 2024-02-25 141559.png" /></a>
+                    <h2><a href="course.html"> Applied Physics-1</a></h4>
                     <p>Anonymous</p>
                 </div>
             </div>
