--- a/public/html/community.html
+++ b/public/html/community.html
@@ -104,7 +104,7 @@
         <li>Local community discussion</li>
       </ul>
       <h3>PRICE : $0.00/month</h3>
-      <button>Join Free</button>
+      <button><a href="/forum" >Join Free</a></button>
     </div>
     <div class="community-paid">
       <h2>Paid Community</h2>
@@ -122,7 +122,7 @@
         <li>Professional answers</li>
       </ul>
       <h3>PRICE : $5.99/month</h3>
-      <button>Join Paid</button>
+      <button><a href="/forum" >Join Paid </a></button>
     </div>
   </div>
 </body>
